# NetologyDiploma

./: CMakeLists.txt
Config/: CMakeLists.txt  config.cpp  config.h  config.ini
DB-service/: CMakeLists.txt  DB_service.cpp  DB_service.h
Http-client/: CMakeLists.txt  http_utils.cpp  http_utils.h  link.h  main.cpp  parser.cpp  parser.h
Http-server/: CMakeLists.txt  http_connection.cpp  http_connection.h  main.cpp
